fix alignment of last message text in project list

--- a/src/sass/projects.sass
+++ b/src/sass/projects.sass
@@ -17,6 +17,8 @@
     margin-top: 0.5em
     padding-right: 2em
     text-align: right
+    .project-last-message
+      text-align: left
     font-size: 1.0em
   .inline-value
     font-weight: bold
